--- a/vars.yml
+++ b/vars.yml
@@ -1,25 +1,82 @@
-- name: Demo on Variables on Play level
-  hosts: localhost
+- name: Demo on Variables on Play
+  hosts: all
   vars:
-     url: play.example.com
+    URL: play.example.com
   tasks:
-     - name: Print variable
-       debug:
-       msg: url = {{url}}
-        # in ansible it accept the variable in two flower braces {{}}
-
-    - name: print variable fron tasks level
-      vars:
-        url: ansible.task.example.com
+    - name: Print Variable
       debug:
-        ## vars in tasks it can only work/across the task level
-        msg: url = {{url}}
-        ## task level variables are overwritten  the play level variable
+        msg: URL = {{URL}}
+        # In ansible we access the variable in two flower braces.
+    - name: Print Variable from Task Declaration
+      vars:
+        URL: task.google.com
+      ## You can declare variable on task level, which the scope of this variable is only on this task level.
+      debug:
+        msg: URL = {{URL}}
+      ## NOTE: task variables will override the play level variables.
 
-- name: Declare the variables in the file and access them
-  hosts: localhost
+- name: Declare the variables in a file and access them
+  hosts: all
   vars_files:
-    - vars1.yml
+    - vars01.yml
+  tasks:
+    - name: Print Variable
+      debug:
+        msg: URL = {{URL}}
+
+- name: Declare variables from inventory file and access them
+  hosts: all
   tasks:
     - name: Print variable
+      debug:
+        msg: URL = {{URL}}
 
+- name: Variable precedence
+  hosts: all
+  vars:
+    URL: play.example.com
+  #  vars_files:
+  #    - vars01.yml
+  vars_prompt:
+    - name: URL
+      prompt: Enter URL
+      private: no
+  tasks:
+    - name: Print Variable
+      debug:
+        msg: URL = {{URL}}
+#      vars:
+#        URL: task.example.com
+## Observations,
+## vars, vars_files, inventory, tasks
+## Lower the number higher the priority
+# 0. Command line arguments given as -e VAR=DATA
+# 1. tasks
+#### Roles variables take precedence when you use roles.
+# 2. vars_files
+# 3. vars_prompt
+# 4. vars
+# 5. Inventory
+
+- name: Register Variables
+  hosts: all
+  tasks:
+    - name: Find files
+      find:
+        paths: /boot
+      register: OUTPUT
+
+    - name: Print OUTPUT
+      debug:
+        msg: OUTPUT = {{OUTPUT}}
+
+- name: Take input from user
+  hosts: all
+  vars_prompt:
+    - name: URL
+      prompt: Enter URL
+      private: no
+  tasks:
+    - name: Print Variable
+      debug:
+        msg: URL = {{URL}}
