--- a/roboshop.yml
+++ b/roboshop.yml
@@ -4,23 +4,21 @@
   #serial: 1  # This option is going server by server, Note: This will slow down the run time.
   ## become also can be given at task level, But it applies only to that task. Giving at play level will be applicable to all the tasks.
   tasks:
-#    - name: Prechecks
-#      import_role:
-#    #Much like the roles: keyword, this task loads a role,
-#    #but it allows you to control it when the role tasks run in between other tasks of the play.
-#        name: common
-#        tasks_from: prechecks
-#      tags:
-#        - frontend
-#        - catalogue
-#        - mongo
-#        - user
-#        - redis
-#        - cart
-#        - shipping
-#        - payment
-#        - rabbitmq
-#        - mysql
+    - name: Prechecks
+      import_role:
+        name: common
+        tasks_from: prechecks
+      tags:
+        - frontend
+        - catalogue
+        - mongo
+        - user
+        - redis
+        - cart
+        - shipping
+        - payment
+        - rabbitmq
+        - mysql
 
     #    - name: Import {{component}} role
     #      import_role:
@@ -47,8 +45,8 @@
 
     - name: Import MongoDB role
       import_role:
-        name: mongo
-      when: component == "mongo"
+        name: mongod
+      when: component == "mongod"
       tags:
         - mongo
 
@@ -72,3 +70,31 @@
       when: component == "redis"
       tags:
         - redis
+
+    - name: Import mysql role
+      import_role:
+        name: mysql
+      when: component == "mysql"
+      tags:
+        - mysql
+
+    - name: Import shipping role
+      import_role:
+        name: shipping
+      when: component == "shipping"
+      tags:
+        - shipping
+
+    - name: Import rabbitmq role
+      import_role:
+        name: rabbitmq
+      when: component == "rabbitmq"
+      tags:
+        - rabbitmq
+
+    - name: Import payment role
+      import_role:
+        name: payment
+      when: component == "payment"
+      tags:
+        - payment
