--- a/roles/common/tasks/prechecks.yml
+++ b/roles/common/tasks/prechecks.yml
@@ -1,19 +1,36 @@
-#PAT
-#set-hostname
-#disable-auto-shoutdown
--  name:  check a PAT variable
-   when:  PAT is undefined
-   fail:
-     msg: PAT is needeed
+##PAT
+##set-hostname
+##disable-auto-shoutdown
+#-  name:  check a PAT variable
+#   when:  PAT is undefined
+#   fail:
+#     msg: PAT is needeed
+#
+## component is available or not
+#-  name: check component variable is available
+#   when: component is undefined
+#   fail:
+#     msg: component variable is needed
+#
+#-  name:   set the default name
+#   shell:  set-hostname {{component}}
+#
+#-  name: disable auto shutdown
+#   shell: disable-auto-shutdown
 
-# component is available or not
--  name: check component variable is available
-   when: component is undefined
-   fail:
-     msg: component variable is needed
+- name: Check a PAT variable
+  when: PAT is undefined
+  fail:
+    msg: "PAT variables is expected"
 
--  name:   set the default name
-   shell:  set-hostname {{component}}
+- name: Check a component variable
+  when: component is undefined
+  fail:
+    msg: "component variables is expected"
 
--  name: disable auto shutdown
-   shell: disable-auto-shutdown
+- name: Set Hostname
+  shell: set-hostname {{component}}
+
+- name: Disable Auto Shutdown
+  shell: disable-auto-shutdown
+
