--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -1,35 +1,72 @@
-- name: Install NodeJS
-  yum:
-    name: [ "nodejs", "make", "gcc-c++" ]
-    state: present
+#- name: Install NodeJS
+#  yum:
+#    name: [ "nodejs", "make", "gcc-c++" ]
+#    state: present
+#
+#-  name: create a roboshop user app
+#   user:
+#     name: roboshop
+#
+#-  name: install az-cli-setup
+#   include_role:
+#      name: common
+#      tasks_from: az-cli-setup.yml
+#
+#-  name: create artifact directory
+#   file:
+#     path: "{{ARTIFACT_PATH}}"
+#     state: directory
+#
+#-  name: download artifact
+#   include_role:
+#       name: common
+#       tasks_from: artifact-download.yml
+#
+#-  name: shipping service chdir
+#   template:
+#     src: shipping.service
+#     dest: /etc/systemd/system/shipping.service
+#
+#-  name: start shipping service
+#   systemd:
+#     name: shipping
+#     state: restarted
+#     enable: yes
+#     daemon-reload: yes
 
--  name: create a roboshop user app
-   user:
-     name: roboshop
+- name: Include Steps for Maven
+  include_role:
+    name: common
+    tasks_from: maven
 
--  name: install az-cli-setup
-   include_role:
-      name: common
-      tasks_from: az-cli-setup.yml
+#- name: Include Steps for Rsyslog
+#  include_role:
+#    name: common
+#    tasks_from: rsyslog
 
--  name: create artifact directory
-   file:
-     path: "{{ARTIFACT_PATH}}"
-     state: directory
+- name: Setup Shipping Service
+  template:
+    src: shipping.service
+    dest: /etc/systemd/system/shipping.service
 
--  name: download artifact
-   include_role:
-       name: common
-       tasks_from: artifact-download.yml
+- name: Start Shipping Service
+  systemd:
+    name: shipping
+    state: restarted
+    enabled: yes
+    daemon_reload: yes
 
--  name: shipping service chdir
-   template:
-     src: shipping.service
-     dest: /etc/systemd/system/shipping.service
+#- name: Include Prometheus Role
+#  include_role:
+#    name: prometheus
+#
+#- name: Include Filebeat Role
+#  include_role:
+#    name: filebeat
+#  vars:
+#    LOG_FILE: /var/log/shipping.log
+#    EXCLUDE_LINES: shipping
+#    IS_STRUCTURED: false
+#    APPNAME: shipping
 
--  name: start shipping service
-   systemd:
-     name: shipping
-     state: restarted
-     enable: yes
-     daemon-reload: yes
+
