--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -1,30 +1,61 @@
--  name: setup nodejs
-   yum:
-     name: [ "nodejs","make", "gcc-c++" ]
-     state: present
+#-  name: setup nodejs
+#   yum:
+#     name: [ "nodejs","make", "gcc-c++" ]
+#     state: present
+#
+#-  name: add roboshop user
+#   user:
+#     name: roboshop
+#
+#-  name: az-cli-setup
+#   include_role:
+#        name: common
+#        tasks_from: az-cli-setup.yml
+#
+#-  name: artifact ddownload directory
+#   file:
+#     path: "{{ARTIFACT_PATH}}"
+#     state: directory
+#
+#-  name: user service chdir
+#   template:
+#     src: user.service
+#     dest: /etc/systemd/system/user.service
+#
+#-  name: start the service
+#   systemd:
+#     name: user
+#     start: restarted
+#     enable: yes
+#     daemon-reload: yes
 
--  name: add roboshop user
-   user:
-     name: roboshop
+- name: Include Steps for NodeJS
+  include_role:
+    name: common
+    tasks_from: nodejs
 
--  name: az-cli-setup
-   include_role:
-        name: common
-        tasks_from: az-cli-setup.yml
+#- name: Include Steps for Rsyslog
+#  include_role:
+#    name: common
+#    tasks_from: rsyslog
 
--  name: artifact ddownload directory
-   file:
-     path: "{{ARTIFACT_PATH}}"
-     state: directory
+- name: Setup User Service
+  template:
+    src: user.service
+    dest: /etc/systemd/system/user.service
 
--  name: user service chdir
-   template:
-     src: user.service
-     dest: /etc/systemd/system/user.service
+- name: Start User Service
+  systemd:
+    name: user
+    state: restarted
+    enabled: yes
+    daemon_reload: yes
 
--  name: start the service
-   systemd:
-     name: user
-     start: restarted
-     enable: yes
-     daemon-reload: yes
+#- name: Include Prometheus Role
+#  include_role:
+#    name: prometheus
+#
+#- name: Include Filebeat Role
+#  include_role:
+#    name: filebeat
+
