--- a/roles/payment/tasks/main.yml
+++ b/roles/payment/tasks/main.yml
@@ -1,47 +1,78 @@
--  name: Install Python 3
-   yum:
-     name: ["python36", "gcc", "python3-devel"]
-     state: present
+#-  name: Install Python 3
+#   yum:
+#     name: ["python36", "gcc", "python3-devel"]
+#     state: present
+#
+#-  name: add roboshop user app
+#   user:
+#      name: roboshop
+#
+#-  name: install az-cli-setup
+#   include_role:
+#         name: common
+#         tasks_from: az-cli-setup.yml
+#
+#-  name: download artifact directory
+#   file:
+#      path: "{{ARTIFACT_PATH}}"
+#      state: directory
+#
+#-  name: cd artifact download
+#   include_role:
+#     name: common
+#     tasks_from: artifact-download.yml
+#
+#-  name: Install specified python requirements offline from a local directory with downloaded packages
+#   pip:
+#      requirements: "{{ARTIFACT_PATH}}/requirements.txt"
+#      executable: pip3
+#
+#-  name: template chdir
+#   template:
+#      src: payment.service
+#      dest: /etc/systemd/system/payment.service
+#
+#-  name: start the service
+#   systemd:
+#         name: payment
+#        start: restarted
+#       enable: yes
+#      daemon-reload: yes
+#
+#
+#
+- name: Include Steps for Python
+  include_role:
+    name: common
+    tasks_from: python
 
--  name: add roboshop user app
-   user:
-      name: roboshop
-
--  name: install az-cli-setup
-   include_role:
-         name: common
-         tasks_from: az-cli-setup.yml
-
--  name: download artifact directory
-   file:
-      path: "{{ARTIFACT_PATH}}"
-      state: directory
-
--  name: cd artifact download
-   include_role:
-     name: common
-     tasks_from: artifact-download.yml
-
--  name: Install specified python requirements offline from a local directory with downloaded packages
-   pip:
-      requirements: "{{ARTIFACT_PATH}}/requirements.txt"
-      executable: pip3
-
--  name: template chdir
-   template:
-      src: payment.service
-      dest: /etc/systemd/system/payment.service
-
--  name: start the service
-   systemd:
-         name: payment
-        start: restarted
-       enable: yes
-      daemon-reload: yes
+#- name: Include Steps for Rsyslog
+#  include_role:
+#    name: common
+#    tasks_from: rsyslog
 
 
+- name: Setup Payment Service
+  template:
+    src: payment.service
+    dest: /etc/systemd/system/payment.service
 
+- name: Start Payment Service
+  systemd:
+    name: payment
+    state: restarted
+    enabled: yes
+    daemon_reload: yes
 
-
-
-
+#- name: Include Prometheus Role
+#  include_role:
+#    name: prometheus
+#
+#- name: Include Filebeat Role
+#  include_role:
+#    name: filebeat
+#  vars:
+#    LOG_FILE: /var/log/payment.log
+#    EXCLUDE_LINES: payment
+#    IS_STRUCTURED: false
+#    APPNAME: payment
