--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -1,21 +1,43 @@
--  name: install the Erlang
-   yum:
-     name: https://packages.erlang-solutions.com/erlang/rpm/centos/7/x86_64/esl-erlang_22.2.1-1~centos~7_amd64.rpm
-     state: present
+#-  name: install the Erlang
+#   yum:
+#     name: https://packages.erlang-solutions.com/erlang/rpm/centos/7/x86_64/esl-erlang_22.2.1-1~centos~7_amd64.rpm
+#     state: present
+#
+#-  name: Setup YUM repositories for RabbitMQ
+#   shell: curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | sudo bash
+#
+#-  name: Install RabbitMQ server
+#   yum:
+#     name: rabbitmq-server
+#     state: present
+#
+#-  name: start the service
+#   systemd:
+#       name: rabbitmq-server
+#       state: started
+#       enable: yes
+#
+#-  name: Create application user
+#   shell: abbitmqctl add_user roboshop roboshop123; rabbitmqctl set_user_tags roboshop administrator; rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
 
--  name: Setup YUM repositories for RabbitMQ
-   shell: curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | sudo bash
+- name: INstall ErLang
+  yum:
+    name: https://packages.erlang-solutions.com/erlang/rpm/centos/7/x86_64/esl-erlang_22.2.1-1~centos~7_amd64.rpm
+    state: present
 
--  name: Install RabbitMQ server
-   yum:
-     name: rabbitmq-server
-     state: present
+- name: Setup RabbitMQ Repos
+  shell: curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | sudo bash
 
--  name: start the service
-   systemd:
-       name: rabbitmq-server
-       state: started
-       enable: yes
+- name: Install RabbitMQ Server
+  yum:
+    name: rabbitmq-server
+    state: present
 
--  name: Create application user
-   shell: abbitmqctl add_user roboshop roboshop123; rabbitmqctl set_user_tags roboshop administrator; rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
+- name: Start RabbitMQ
+  systemd:
+    name: rabbitmq-server
+    state: started
+    enabled: yes
+
+- name: Create Application User
+  shell: rabbitmqctl add_user roboshop roboshop123; rabbitmqctl set_user_tags roboshop administrator; rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
