--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -1,24 +1,46 @@
--  name: Install REMI for Redis
-   yum:
-       name: http://rpms.remirepo.net/enterprise/remi-release-7.rpm
-       state: latest
+#-  name: Install REMI for Redis
+#   yum:
+#       name: http://rpms.remirepo.net/enterprise/remi-release-7.rpm
+#       state: latest
+#
+#-  name: Install Redis
+#   yum:
+#     name: redis
+#     state: latest
+#     enable: remi
+#
+#-  name: Update the BindIP from 127.0.0.1 to 0.0.0.0
+#   replace:
+#     path: /etc/redis.conf
+#     regexp: '127.0.0.1'
+#     replace: '0.0.0.0'
+#
+#-  name: start the service
+#   systemd:
+#      name: redis
+#      state: started
+#      enable: yes
+#
+#
+- name: Install REMI for Redis
+  yum:
+    name: http://rpms.remirepo.net/enterprise/remi-release-7.rpm
+    state: latest
 
--  name: Install Redis
-   yum:
-     name: redis
-     state: latest
-     enable: remi
+- name: Install Redis
+  yum:
+    name: redis
+    state: latest
+    enablerepo: remi
 
--  name: Update the BindIP from 127.0.0.1 to 0.0.0.0
-   replace:
-     path: /etc/redis.conf
-     regexp: '127.0.0.1'
-     replace: '0.0.0.0'
+- name: Update Listen Address
+  replace:
+    path: /etc/redis.conf
+    regexp: '127.0.0.1'
+    replace: '0.0.0.0'
 
--  name: start the service
-   systemd:
-      name: redis
-      state: started
-      enable: yes
-
-
+- name: Start Redis Service
+  systemd:
+    name: redis
+    state: started
+    enabled: yes
