--- a/roboshop.yml
+++ b/roboshop.yml
@@ -36,65 +36,65 @@
       tags:
         - frontend
 
-    - name: Import catalogue role
-      import_role:
-             name: catalogue
-      when: component == "catalogue"
-      tags:
-        - catalogue
-
-    - name: Import MongoDB role
-      import_role:
-             name: mongo
-      when: component == "mongo"
-      tags:
-        - mongo
-
-    - name: Import cart role
-      import_role:
-             name: cart
-      when: component == "cart"
-      tags:
-        - cart
-
-    - name: Import user role
-      import_role:
-             name: user
-      when: component == "user"
-      tags:
-        - user
-
-    - name: Import redis role
-      import_role:
-             name: redis
-      when: component == "redis"
-      tags:
-        - redis
-
-    - name: Import mysql role
-      import_role:
-             name: mysql
-      when: component == "mysql"
-      tags:
-        - mysql
-
-    - name: Import shipping role
-      import_role:
-             name: shipping
-      when: component == "shipping"
-      tags:
-        - shipping
-
-    - name: Import rabbitmq role
-      import_role:
-             name: rabbitmq
-      when: component == "rabbitmq"
-      tags:
-        - rabbitmq
-
-    - name: Import payment role
-      import_role:
-             name: payment
-      when: component == "payment"
-      tags:
-        - payment
+#    - name: Import catalogue role
+#      import_role:
+#             name: catalogue
+#      when: component == "catalogue"
+#      tags:
+#        - catalogue
+#
+#    - name: Import MongoDB role
+#      import_role:
+#             name: mongo
+#      when: component == "mongo"
+#      tags:
+#        - mongo
+#
+#    - name: Import cart role
+#      import_role:
+#             name: cart
+#      when: component == "cart"
+#      tags:
+#        - cart
+#
+#    - name: Import user role
+#      import_role:
+#             name: user
+#      when: component == "user"
+#      tags:
+#        - user
+#
+#    - name: Import redis role
+#      import_role:
+#             name: redis
+#      when: component == "redis"
+#      tags:
+#        - redis
+#
+#    - name: Import mysql role
+#      import_role:
+#             name: mysql
+#      when: component == "mysql"
+#      tags:
+#        - mysql
+#
+#    - name: Import shipping role
+#      import_role:
+#             name: shipping
+#      when: component == "shipping"
+#      tags:
+#        - shipping
+#
+#    - name: Import rabbitmq role
+#      import_role:
+#             name: rabbitmq
+#      when: component == "rabbitmq"
+#      tags:
+#        - rabbitmq
+#
+#    - name: Import payment role
+#      import_role:
+#             name: payment
+#      when: component == "payment"
+#      tags:
+#        - payment
