--- a/roles/frontend/handlers/main.yml
+++ b/roles/frontend/handlers/main.yml
@@ -1,5 +1,5 @@
--  name: Restart nginx
-   systemd:
-     name: nginx
-     state: restarted
-     enable: yes
+- name: Restart NGINX
+  systemd:
+    name: nginx
+    state: restarted
+    enabled: yes
