--- a/roboshop.yml
+++ b/roboshop.yml
@@ -71,12 +71,12 @@
       tags:
         - redis
 
-#    - name: Import mysql role
-#      import_role:
-#             name: mysql
-#      when: component == "mysql"
-#      tags:
-#        - mysql
+    - name: Import mysql role
+      import_role:
+             name: mysql
+      when: component == "mysql"
+      tags:
+        - mysql
 
     - name: Import shipping role
       import_role:
