--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -13,6 +13,8 @@
      name: mysqld
      state: started
 
+# netstat -lntp --> port no: 3306 for mysql service
+
 -  name: Wait until service starts
    wait_for:
      port: 3306
