--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -121,10 +121,10 @@
     name: common
     tasks_from: nodejs
 
-- name: Include Steps for Rsyslog
-  include_role:
-    name: common
-    tasks_from: rsyslog
+#- name: Include Steps for Rsyslog
+#  include_role:
+#    name: common
+#    tasks_from: rsyslog
 
 - name: Setup Catalogue Service
   template:
@@ -138,15 +138,15 @@
     enabled: yes
     daemon_reload: yes
 
-- name: Include Prometheus Role
-  include_role:
-    name: prometheus
-
-- name: Include Filebeat Role
-  include_role:
-    name: filebeat
-  vars:
-    LOG_FILE: /var/log/catalogue.log
-    EXCLUDE_LINES: nodejs
-    IS_STRUCTURED: true
-    APPNAME: catalogue
+#- name: Include Prometheus Role
+#  include_role:
+#    name: prometheus
+#
+#- name: Include Filebeat Role
+#  include_role:
+#    name: filebeat
+#  vars:
+#    LOG_FILE: /var/log/catalogue.log
+#    EXCLUDE_LINES: nodejs
+#    IS_STRUCTURED: true
+#    APPNAME: catalogue
