--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,7 +1,7 @@
 -  name: Copy MySQL Repo
    copy:
-     src: mysql.repo
-     dest: /etc/yum.repos.d/mysql.repo
+     src: mysql.repos
+     dest: /etc/yum.repos.d/mysql.repos
 
 -  name: INstall MySQL and Dependencies
    yum:
