--- a/roles/user/templates/user.service
+++ b/roles/user/templates/user.service
@@ -1,9 +1,9 @@
 [Unit]
-Description = User Service
+Description = Catalogue Service
 [Service]
 User=roboshop
-Environment=REDIS_HOST=REDIS_ENDPOINT
-Environment=MONGO_URL="mongodb://MONGO_ENDPOINT:27017/users"
+Environment=MONGO_URL="mongodb://{{MONGO_ENDPOINT}}:27017/catalogue"
+Environment=REDIS_HOST={{REDIS_ENDPOINT}}
 ExecStart=/bin/node /home/roboshop/user/server.js
 SyslogIdentifier=user
 
