--- a/roles/cart/templates/cart.service
+++ b/roles/cart/templates/cart.service
@@ -2,8 +2,8 @@
   Description = Cart Service
   [Service]
   User=roboshop
-  Environment=REDIS_HOST=REDIS_ENDPOINT
-  Environment=CATALOGUE_HOST=CATALOGUE_ENDPOINT
+  Environment=REDIS_HOST={{REDIS_ENDPOINT}}
+  Environment=CATALOGUE_HOST={{CATALOGUE_ENDPOINT}}
   ExecStart=/bin/node /home/roboshop/cart/server.js
   SyslogIdentifier=cart
 
